# psprt-ai

./: .env.dev  Dockerfile  crop.py  docker-compose.yml  dump.rdb  entrypoint.sh  env.dev  erl_crash.dump  face_area.py  face_area_crop.py  face_crop.py  face_crop2 copy.py  face_crop2.py  face_detector.py  gunicorn.conf.py  photo_preparation.py  prod.certbot.yml  pyproject.toml  rm_bg_crop.py  test_facecrop.py  zoom_crop.py
.github/workflows/: main.yml
app/: consumers.py  forms.py  models.py  routing.py  service.py  service_v2.py  stripe.py  task.py  temp_crop2.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_file_owner_alter_file_file.py  0002_userfile_watermarked.py  0003_alter_file_owner.py  0003_userfile_paid.py  0004_remove_file_owner.py  0005_file_name.py  0006_rename_name_file_session.py  0007_file_prepared_for_alter_file_file.py  0008_file_edited_alter_file_prepared_for.py  0009_rename_file_userfile.py
app/static/css/: styles.css
app/static/js/: final_page.js  prepared.js  websocket.js
app/templatetags/: dict_lookup.py
core/: asgi.py  celery.py  settings.py  urls.py
nginx/: Dockerfile  certbot.conf  default.conf
nginx/conf.d/: proxy.conf
templates/: base.html  choose.html  landing_page.html  login_page.html  prepare.html  prepared.html  service_page.html  upload.html
users/: managers.py  models.py
users/migrations/: 0001_initial.py
