[tool.poetry]
name = "passport photo ai"
version = "0.1.0"
description = ""
authors = ["Denis Sakhno <97180503+ideniska@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
distlib = "^0.3.6"
Faker = "^16.3.0"
django-cors-headers = "^3.13.0"
dlib = "^19.24.0"
Pillow = "^9.4.0"
rembg = "2.0.30"
cmake = "^3.25.0"
Django = "4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
